namespace Head_First_Design_Patterns.Strategy_Pattern.After;

public class FlyWithWings : FlyBehaviour
{
    public void fly()
    {
        Console.WriteLine("flap flap!!");
    }
}