namespace Head_First_Design_Patterns.Strategy_Pattern.After;

public class MuteQuack : QuackBehaviour
{
    public void quack()
    {
        Console.WriteLine("<< Silence >>");
    }
}