namespace Head_First_Design_Patterns.Strategy_Pattern.After;

public class Squeak : QuackBehaviour
{
     public void quack()
     {
         Console.WriteLine("Squeak squeak");
     }
}